# phantasma-link-relay

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.docker.toml  config.example.toml  docker-compose.yml  justfile
hosting/: README.md
hosting/nginx/: link.phantasma.info.conf
hosting/site/: index.html
hosting/site/.well-known/: apple-app-site-association  assetlinks.json
hosting/site/v5/: index.html
src/: config.rs  conn.rs  hub.rs  lib.rs  main.rs  protocol.rs
tests/: relay_integration.rs
